.metadata/.plugins/org.eclipse.cdt.ui/test.build.log
01:04:55 **** Build of configuration Debug for project test ****
make all 
'Building file: ../src/test.cpp'
'Invoking: Cross G++ Compiler'
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/test.d" -MT"src/test.d" -o "src/test.o" "../src/test.cpp"
../src/test.cpp: In function 'int main()':
../src/test.cpp:11:2: error: 'cout' was not declared in this scope
  cout << "!!!Hello World!!!"; // prints !!!Hello World!!!
  ^
src/subdir.mk:18: recipe for target 'src/test.o' failed
make: *** [src/test.o] Error 1

01:04:55 Build Finished (took 240ms)

